<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/inputFirst"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="0"
        android:hint="@string/first_input_for_calculation"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/inputSecond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputSecond"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="0"
        android:hint="@string/second_input_for_calculation"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputFirst" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/purple_500"
        android:onClick="doPlus"
        android:text="@string/plus"
        app:layout_constraintBottom_toTopOf="@+id/output"
        app:layout_constraintEnd_toStartOf="@+id/btnMinus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSecond" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/purple_500"
        android:onClick="doMinus"
        android:text="@string/minus"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnPlus"
        app:layout_constraintEnd_toStartOf="@+id/btnMultiple"
        app:layout_constraintStart_toEndOf="@+id/btnPlus" />

    <Button
        android:id="@+id/btnMultiple"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/purple_500"
        android:onClick="doMultiple"
        android:text="@string/multiple"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnPlus"
        app:layout_constraintEnd_toStartOf="@+id/btnDivision"
        app:layout_constraintStart_toEndOf="@+id/btnMinus" />

    <Button
        android:id="@+id/btnDivision"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/purple_500"
        android:onClick="doDivision"
        android:text="@string/divide"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnMultiple" />

    <TextView
        android:id="@+id/output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:padding="20dp"
        android:text="@string/result_here"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlus" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="clear"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output" />

</androidx.constraintlayout.widget.ConstraintLayout>